Fixed color as well as Interger.valueof